--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "angularfire": "~0.8.2"
+    "angularfire": "~0.8.2",
+    "firebase": "1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
